[tool.poetry]
name = "chart"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.26.1", python = "<3.13,>=3.9" }
pandas = "^2.1.3"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
